@@ -7,10 +7,11 @@ RELEASE HISTORY
 ---------------------------
 **Updates**
 
-* renamed method compare_gps to analyze_gps
+* renamed method compare_gps to analyze_with_bfs
 
-* analyze_gps computes error, std, and returns tabulated results
+* analyze_with_bfs computes error, std, and returns tabulated results
 
+* added docs
 
 
 0.3.1 (2022-10-04)
