@@ -1,5 +1,7 @@
-numpy>=1.23.2
-pandas>=1.4.4
+numpy>=1.23.3
+pandas>=1.5.0
 python-dateutil>=2.8.2
 ypstruct>=0.0.2
 scikit-learn>=1.1.2
+tabulate>=0.9.0
+so4gp>=0.3.1
