@@ -4,8 +4,9 @@ RELEASE NOTES
 0.3.2
 ---------------------------
 Updates
-- renamed method compare_gps to analyze_gps
-- analyze_gps computes error, std, and returns tabulated results
+- renamed method compare_gps to analyze_with_bfs
+- analyze_with_bfs computes error, std, and returns tabulated results
+- added docs
 
 
 0.3.1
